Ensure long range labels don't wrap. Closes #100

--- a/app/assets/stylesheets/scenes/_modern.sass
+++ b/app/assets/stylesheets/scenes/_modern.sass
@@ -160,12 +160,19 @@
 
         .label
           float: left
-          width: 182px
+          width: 222px
+
+          .label-text
+            display: inline-block
+            max-width: 194px
+            overflow: hidden
+            text-overflow: ellipsis
+            white-space: nowrap
 
         .value
           float: left
           text-align: right
-          width: 100px
+          width: 60px
 
           sub, sup
             font-size: 10px
